[tool.poetry]
name = "my-scripts"
version = "2.0"
description = "Tools to be used with Scikit-Learn, Pytorch and Tensorflow."
authors = ["Karl Loza <luigiloza@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.26.0"
pandas = "^2.1.1"
matplotlib = "^3.8.0"
seaborn = "^0.12.2"
scikit-learn = "^1.3.1"
imbalanced-learn = "^0.11.0"
pillow = "^10.0.1"
torch = {version = "^2.0.1", allow-prereleases = true}
torchvision = {version = "^0.15.2", allow-prereleases = true}
torchaudio = {version = "^2.0.2", allow-prereleases = true}


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
